# ledger

./: .env.example  .gitignore  README.md  pyproject.toml  setup.md  uninstall.md
docs/: ARCHITECTURE.md
ledger/: __init__.py  config.py  connect.py  db.py  mcp_server.py  plaid_client.py  refresh.py  tokens.py
ledger/templates/: link.html
