[project]
name = "ledger"
version = "0.1.0"
description = "Personal financial aggregator MCP server. Plaid-backed, locally hosted."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Niel Hu" }]

dependencies = [
  "plaid-python>=29.0.0",
  "flask>=3.0.0",
  "python-dotenv>=1.0.0",
  "keyring>=24.0.0",
  "mcp>=1.0.0",
]

[project.scripts]
ledger-connect = "ledger.connect:main"
ledger-refresh = "ledger.refresh:main"
ledger-mcp = "ledger.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ledger*"]
